--- a/public/hof/index.html
+++ b/public/hof/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Hall of Fame - SIMPIC 2020</title>
+		<title>Hall of Fame - SIMPICSED</title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<!-- Bootstrap core CSS -->
